@@ -1,3 +1,9 @@
+2008-04-15  David Wetzel <dave@turbocat.de>
+        GSWeb.framework/GSWConstants.m
+        GSWExtensions.framework/GSWExtWOCompatibility.h
+        * make WOSessionCreationError work with WO names 
+        (maybe we can change the SED script to be 100% compatible?, does that matter?)
+ 
 2008-04-09  David Wetzel <dave@turbocat.de>
         GSWAdaptors/Apache2/mod_gsw.c
         * small cleanups
